syntax = "proto3";
package DomainServices.OfferService;
option csharp_namespace = "DomainServices.OfferService.Contracts";

import "google/protobuf/wrappers.proto";

message CreateResponseCodeRequest {
	int64 CaseId = 1;
	int32 ResponseCodeTypeId = 2;
	google.protobuf.StringValue Data = 3;
}

message CreateResponseCodeResponse {
	int32 ResponseCodeId = 1;
}