syntax = "proto3";
package DomainServices.OfferService;
option csharp_namespace = "DomainServices.OfferService.Contracts";

import "GrpcDate.proto";
import "GrpcDecimal.proto";

message GetInterestRateRequest {
	int64 CaseId = 1;
	cis.types.GrpcDate FutureInterestRateValidTo = 2;
}

message GetInterestRateResponse {
	cis.types.GrpcDecimal LoanInterestRate = 1;
}
